# cure-found

./: .gitignore  CureFound_Proposal.docx  Dockerfile  README.md  proposal_text.txt
.claude/: settings.local.json
curefound/: .dockerignore  .env.example  .gitignore  Makefile  PHASE1_SETUP.md  README.md  compose.yml  fly.toml  pyproject.toml  run.py
curefound/.github/workflows/: ci.yml
curefound/api/: main.py
curefound/api/services/: diagnose.py  repurpose.py
curefound/app/: __init__.py  main.py
curefound/app/admin/: __init__.py  router.py  schemas.py
curefound/app/core/: __init__.py  config.py  exceptions.py  lifespan.py  logging.py  paths.py
curefound/app/diagnose/: __init__.py  deps.py  exceptions.py  router.py  schemas.py  service.py
curefound/app/etl/: _base.py  build_seed_kg.py  expand_hpo_lsd.py  fetch_all.py  id_map_service.py
curefound/app/etl/ingest/: __init__.py  all.py  drugcentral.py  hpo.py  orphanet.py  primekg.py  reactome.py
curefound/app/kg/: backend.py  deps.py  exceptions.py  loader.py  neo4j_backend.py  router.py  schemas.py
curefound/app/ml/: deps.py  distmult.py  eval.py  rotate.py  transe.py
curefound/app/repurpose/: __init__.py  deps.py  exceptions.py  router.py  schemas.py  service.py
curefound/data/artifacts/: eval_report.json  eval_report_rgcn.json  kge_meta.json  rgcn.npz  rgcn_meta.json  rotate.npz  transe.npz  transe_meta.json
curefound/data/seed/: kg-mvp.json  kg.json
curefound/docker/: Dockerfile  Dockerfile.backend
curefound/docker/neo4j/: init.cypher
curefound/etl/: build_seed_kg.py  id_map_service.py
curefound/frontend/: README.md  app.js  index.html  package-lock.json  package.json  style.css  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
curefound/frontend/src/: App.tsx
curefound/frontend/src/components/: ApiStatusChip.tsx  DiagnoseSection.tsx  EvalSection.tsx  ExplorerSection.tsx  Footer.tsx  HeroKGCanvas.tsx  KGPulse.tsx  MethodsSection.tsx  RepurposeSection.tsx
curefound/frontend/src/components/aceternity/: index.tsx
curefound/frontend/src/components/ui/: NumberTicker.tsx
curefound/frontend/src/lib/: data.ts  gsap.ts  kg-vocab.ts  motion.ts  utils.ts
curefound/frontend/src/styles/: index.css
curefound/kg/: loader.py
curefound/ml/: eval.py  transe.py
curefound/scripts/: colab_gnn_training.ipynb  dev.sh  lint.sh  train_gnns_pykeen.py
curefound/tests/: conftest.py  smoke.py  test_backend.py
curefound/tests/e2e/: smoke.py
curefound/tests/integration/: conftest.py  test_admin_router.py  test_diagnose_router.py  test_kg_router.py  test_repurpose_router.py
curefound/tests/regression/: test_backend.py
curefound/tests/unit/: test_ingestor_helpers.py  test_kg_accumulator.py
